# youtube-highlighter

./: .env.example  .gitignore  CLAUDE.md  DOUBLE-CLICK-TO-START.md  Makefile  README.md  activate.sh  config.yaml  dev.sh  launch.bat  launch.command  launch.desktop  launch.sh  pyproject.toml  requirements-lock.txt  requirements.txt  run.sh  setup.bat  setup.sh  validate.py
app/: cli.py  config.py  html_generator.py  html_generator_backup.py  html_generator_simple.py  intelligent_segments.py  main.py  segments.py  summarize.py  transcript.py  transcript_downloader.py  transcript_formatter.py  video.py
app/web/: server.py
app/web/templates/: error.html  index.html  manual_transcript.html  processing.html  results.html  success.html
tests/: sample.vtt  test_segments.py  test_summarize.py  test_transcript.py  test_transcript_downloader.py  test_transcript_downloader_enhanced.py  test_transcript_formatter.py  test_transcript_parser_enhanced.py  test_transcript_parser_improved.py  test_video.py  test_video_enhanced.py  test_video_player.py
